fixed highlighter overflow rules.

--- a/src/styles/components/highlighter.scss
+++ b/src/styles/components/highlighter.scss
@@ -1,7 +1,9 @@
 .hljs{
+  height: 100vh;
   font-family: 'Roboto Mono', monospace;
   display:block;
   overflow-x:auto;
+  overflow-y:auto;
   padding:0.5em;
   background:#1E1E1E;
   color:#DCDCDC
